implémentation de l'update d'un user
